Opened 15 years ago

Closed 15 years ago

#4704 closed bug (fixed)

[Twitcher] Arrow drawing artifacts

Reported by: mpanasyuk Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

How to reproduce:

1) Open several Tracker windows. 2) Open several applications which have only one window (ex. Pulse + Clock + Playground). 3) Summon Twitcher (press and hold Ctrl+Tab or Alt+Tab if you use Windows/Linux mode for shortcuts). Don't release Ctrl (Alt) yet. 4) Press Tab to switch to application with several windows (Tracker).

Note there is an arrow pointing down which indicates an app (Tracker) has more than one window you can chose from to switch to.

5) Press Tab again several times.

Note that arrow is still present for applications which have only one window. It's not filled with dark color and will became less and less visible as you switch from one app to another.

Haiku R1/alpha1 (Revision 32975)

Change History (3)

comment:1 by mpanasyuk, 15 years ago

Component: - GeneralUser Interface
Owner: changed from nobody to stippi

comment:2 by axeld, 15 years ago

Component: User InterfaceApplications/Deskbar
Owner: changed from stippi to axeld
Version: R1/pre-alpha1R1/Development

comment:3 by axeld, 15 years ago

Resolution: fixed
Status: newclosed

Mostly fixed in hrev33676 (some minor issues remain not mentioned here).

Note: See TracTickets for help on using tickets.