* Fixed Twitcher's arrow drawing glitches as described in ticket #4704. * Unfortunately, there are remaining issues, but this is something I need to   discuss with Stippi: B_OP_COPY does not work as expected due to anti-aliasing   anymore, but there is no replacement one could possibly use to get the desired   effect without having to clear the background every time.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33676 a95241bf-73f2-0310-859d-f6bbb57e9c96